LuaJava version set to 2.0